--- a/styles/styles.css
+++ b/styles/styles.css
@@ -242,11 +242,15 @@ section#work, section#about, section#contact{
     padding:120px 10% 15%;
     overflow: hidden;
 }
+
 /**************************************************************
 
     About
 
 /**************************************************************/
+section#about {
+    padding-top: 100px;
+}
 section#about .flower-wrapper{
     display: none
 }
@@ -301,7 +305,7 @@ section#work .item a:hover h3{
 }
 
 section#work .item:hover{
-    box-shadow: 0px 10px 15px #999;
+    box-shadow: 0px 0px 50px #999;
 }
 /**************************************************************
 
@@ -361,10 +365,10 @@ section#about,section#contact {
     width: 100%;
     background-color: #fff;
     min-height: 100vh;
-    animation: fadein2 1s;
-    -moz-animation: fadein2 1s; /* Firefox */
-    -webkit-animation: fadein2 1s; /* Safari and Chrome */
-    -o-animation: fadein2 1s; /* Opera */
+    animation: fadein2 .5s;
+    -moz-animation: fadein2 .5s; /* Firefox */
+    -webkit-animation: fadein2 .5s; /* Safari and Chrome */
+    -o-animation: fadein2 .5s; /* Opera */
 }    
 .portfolio-wrapper{
     padding: 10%;
@@ -448,11 +452,10 @@ section#about,section#contact {
     }
     /* About */
     section#about{
-        padding-bottom: 10%;
         background-image: none;
     }
     section#about img{
-        margin-top: 25%;
+        margin-top: 22%;
         max-width: 340px;
     }
     section#about::after{
@@ -461,8 +464,8 @@ section#about,section#contact {
     section#about .flower-wrapper{
         display: block;
         position: absolute;
-        top: 10%;
-        right: 10%;
+        top: 5%;
+        right:5%;
         opacity: .15 !important;
     }
     section#about img.flower{
